--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <body>{
+        border: 10px solid red;
+    }</body>
     <header>
         <nav>
             <a href="#">Inicio</a>
