--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#">Portafolio</a>
             <a href="#">Servicios</a>
             <a href="#">Contacto</a>
+            <a href="#">Busqueda</a>
         </nav>
         <section class="textos-header">
             <h1>Potencia tus ventas al menos un 200%</h1>
